--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.idea
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -110,11 +112,11 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
+# Spyder src settings
 .spyderproject
 .spyproject
 
-# Rope project settings
+# Rope src settings
 .ropeproject
 
 # mkdocs documentation
